Prevent vertical scroll on mobile menu expansion

--- a/ui/base/base.scss
+++ b/ui/base/base.scss
@@ -61,4 +61,6 @@ a {
 
 .preventscroll {
   overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
